--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -2,22 +2,39 @@ body {
   background-color: rgb(83, 46, 207);
   font-family: "Gothic A1", serif;
 }
-
 .post {
-  background-color: rgb(144, 118, 231);
-  border-radius: 10px;
-  list-style: none;
+  margin: 1rem 0;
   padding: 1rem;
+  background-color: #9c7eee;
+  border-radius: 8px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  animation: animate-in 1s ease-out forwards;
+  list-style: none;
 }
 
 .author {
-  font-size: 18px;
-  font-weight: 600;
-  color: rgba(0, 0, 0, 0.8);
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #543280;
+  margin: 0;
+  text-transform: uppercase;
 }
 
-.body {
-  font-size: 16px;
-  font-weight: 500;
-  color: rgba(0, 0, 0, 0.6);
+.text {
+  white-space: pre-wrap;
+  font-size: 1.25rem;
+  margin: 0.25rem 0 0 0;
+  color: #593884;
+  font-style: italic;
+}
+
+@keyframes animate-in {
+  from {
+    opacity: 0;
+    transform: translateY(1.5rem);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
 }
