--- a/src/routes/NewPost.module.css
+++ b/src/routes/NewPost.module.css
@@ -1,9 +1,7 @@
 .form {
   background-color: #6233b9;
   padding: 2rem;
-  width: 30rem;
-  margin: 0 auto;
-  border-radius: 6px;
+  width: 20rem;
 }
 
 .form label {
@@ -15,7 +13,7 @@
 
 .form input,
 .form textarea {
-  margin: 1rem auto;
+  box-sizing: border-box;
   display: block;
   width: 100%;
   font: inherit;
@@ -29,6 +27,7 @@
 .actions {
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   gap: 0.5rem;
 }
 
@@ -46,10 +45,12 @@
   background-color: #23014a;
 }
 
-.actions button[type="button"] {
+.actions a {
   background-color: transparent;
+  text-decoration: none;
+  color: #e5d5f7;
 }
 
-.actions button[type="button"]:hover {
+.actions a:hover {
   color: #d1bee6;
 }
